# Pointpillars-TensorRT-ROS

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/autoware_msgs/: DetectedObject.h  DetectedObjectArray.h
devel/lib/perception/: perception
devel/lib/pkgconfig/: autoware_msgs.pc  perception.pc
devel/lib/python3/dist-packages/autoware_msgs/msg/: _DetectedObject.py  _DetectedObjectArray.py
devel/share/autoware_msgs/cmake/: autoware_msgs-msg-paths.cmake  autoware_msgsConfig.cmake
devel/share/common-lisp/ros/autoware_msgs/msg/: DetectedObject.lisp  DetectedObjectArray.lisp  _package.lisp  _package_DetectedObject.lisp  autoware_msgs-msg.asd
devel/share/gennodejs/ros/autoware_msgs/msg/: DetectedObject.js  DetectedObjectArray.js
devel/share/perception/cmake/: perceptionConfig.cmake
devel/share/roseus/ros/autoware_msgs/: manifest.l
devel/share/roseus/ros/autoware_msgs/msg/: DetectedObject.l  DetectedObjectArray.l
src/autoware_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/msg/: DetectedObject.msg
src/perception/: CMakeLists.txt  bootstrap.yaml  package.xml
src/perception/cfgs/: hv_pointpillars_secfpn.yaml
src/perception/data/: boxes.txt
src/perception/launch/: perception.launch
src/perception/model/: pts_pfe.onnx.cache
src/perception/nodes/: mmdet_ros.cc  mmdet_ros.h
src/perception/pointpillars/: common.h  nms.cu  nms.h  pointpillars.cc  pointpillars.h  postprocess.cu  postprocess.h  preprocess.cu  preprocess.h  scatter.cu  scatter.h
